plugins {
    id 'org.moddingx.modgradle.meta' version '5.1.2'
    id 'org.moddingx.modgradle.javadoc' version '5.1.2'
}

sourceSets {
    ap
    sourcegen
    main { java.srcDirs += [ file('./src/generated/java') ] }
}

configurations {
    apCompileOnlyResolvable {
        canBeResolved = true
        canBeConsumed = false
        extendsFrom configurations.apCompileOnly
    }
}

dependencies {
    apCompileOnly 'com.google.code.findbugs:jsr305:3.0.2'
}

sourceSets.ap.compileClasspath = configurations.apCompileOnlyResolvable
sourceSets.sourcegen.compileClasspath = configurations.compileClasspath

mod.configure {
    modid 'libx'
    group 'org.moddingx'
    versioning {
        base '1.21.4-6.2'
        maven 'https://maven.moddingx.org/release'
    }

    neoforge '21.4.157'
    extraModSource sourceSets.ap

    license 'The Apache License, Version 2.0'
    github 'ModdingX/LibX'

    runs {
        data {
            modSource sourceSets.sourcegen
        }
    }

    artifacts {
        useJarJar()
        sources {
            publishToRepositories()
            uploadToModHostingSites()
        }
        javadoc {}
    }

    publishing {
        maven {
            name = 'moddingx'
            url = 'https://maven.moddingx.org/release'
            credentials(PasswordCredentials)
        }
    }

    upload {
        curseforge {
            projectId 412525
        }
        modrinth {
            projectId 'qEH6GYul'
        }
    }
}

dependencies {
    annotationProcessor sourceSets.ap.output
    implementation sourceSets.ap.output

    runtimeOnly(jarJar(project(':coremods')))

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.2'
}

compileJava.options.compilerArgs += [
        '-Amod.properties.strict_onlyin=true',
        '-Amod.properties.strict_super=true',
        '-Amod.properties.javax_nullity=true'
]

test {
    useJUnitPlatform()
}

jar {
    from sourceSets.ap.output
}

javadocConfigure {
    exclude '**.impl.*?'
    exclude '**.annotation.processor.*?'
}

javadoc {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.destinationDirectory(file("build/docs/javadoc"))
    title = "LibX ${mod.setup.minecraft} JavaDoc"
    options.windowTitle("LibX ${mod.setup.minecraft} JavaDoc")
    options.header('<h3><a href="https://moddingx.org/wiki/libx" target="_blank">Wiki</a>' \
            + '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' \
            + '<a href="https://github.com/ModdingX/LibX" target="_blank">GitHub</a></h2>')
    options.memberLevel = JavadocMemberLevel.PROTECTED
}

// Performs checks for releases
task release {
    finalizedBy compileJava

    doFirst {
        compileJava.options.compilerArgs += [
                '-Amod.properties.release=true'
        ]
    }
}

tasks.withType(Javadoc).configureEach {
    def linksRootProvider = project.layout.buildDirectory.dir("javadocLinks/links")
    doFirst {
        def linksRoot = linksRootProvider.get().asFile
        if (!linksRoot.exists()) return

        linksRoot.eachDirRecurse { dir ->
            def pkgList = new File(dir, "package-list")
            if (pkgList.exists()) return

            def elementList = new File(dir, "element-list")
            if (elementList.exists()) {
                def entries = elementList.getText("UTF-8")
                        .split(/\s+/)
                        .findAll { it && !it.startsWith("module:") }

                pkgList.setText(entries.join(System.lineSeparator()) + System.lineSeparator(), "UTF-8")
            } else {
                // Fallback: prevent "FileNotFoundException: .../package-list"
                pkgList.setText("", "UTF-8")
            }
        }
    }

    javadocTool = javaToolchains.javadocToolFor { // todo remove in Minecraft 26.1
        languageVersion = JavaLanguageVersion.of(25)
    }
}
